--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -48,12 +48,12 @@
    </li>
    <li class='<%if ['/admin/booking/reports/reservations',
       '/admin/booking/reports/customers',
-      '/admin/booking/console',
+      '/admin/booking/pickup-return',
       ].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.listing%></a>
       <ul>
         <li><a href='/admin/booking/reports/reservations'><%=t.booking_console.report_reservations%></a></li>
         <li><a href='/admin/booking/reports/customers'><%=t.booking_console.report_customers%></a></li>        
-        <li><a href='/admin/booking/console'><%=t.booking_console.title%></a></li>           
+        <li><a href='/admin/booking/reports/pickup-return'><%=t.booking_console.report_pickup_return%></a></li>           
       </ul>    
    </li>
    <li class='<%if ['/admin/charges'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.finances%></a>
