--- a/views/report_reservations.erb
+++ b/views/report_reservations.erb
@@ -11,6 +11,9 @@
 </style>
 <div class="top-navigation-bar">
   <h2 class="entity-title">Listado de reservas</h2>
+  <div class="form-button" style="float: right">
+     <a id="print_link" href="/admin/booking/reports/reservations-pdf" target="_blank">Imprimir</a>
+  </div>  
 </div>
 <div class="admin_content_wrapper">
   <div>
