--- a/views/reserva-finalizada.erb
+++ b/views/reserva-finalizada.erb
@@ -4,7 +4,7 @@
        <%= partial(:reserva, :locals => {:booking => booking, :message => ''}) %>  
      </div>
    </div>
-   <div class="grid_4 top-margin">
+   <div class="grid_4">
      <%= partial(:booking_price, :locals => {:booking => booking}) %>  
    </div>
  </div>
