--- a/views/_booking_activity_price_management.erb
+++ b/views/_booking_activity_price_management.erb
@@ -1,4 +1,7 @@
                     <ul id="prices_tabs" class="content_tabs no-border no-background smaller_text">  
+                      <li class="no-border no-background top-space" style="border:none;background:none">
+                        <a name="price_tab" href="#price_tab">Detalle de la tarifa</a>
+                      </li>                       
                       <%% if (entity.price_definition_1_id != null) { %>
                       <li class="no-border no-background top-space" style="border:none;background:none">
                         <a name="price_definition_1_tab" href="#price_definition_1_tab">Tarifa <%%=entity.price_1_description%></a>
@@ -24,6 +27,35 @@
                     </ul>
 
                     <div id="prices_content" class="content">
+
+                      <div id="price_tab" class="top-margin bottom-margin">
+                        <div class="container_12">
+                          <div class="grid_6">
+                            <form name="element" method="POST">    
+                              <input type="hidden" name="id" value="<%%=entity.id%>"/>
+                              <div class="formrow">
+                                <label class="fieldtitle"><%=t.booking_activity_management.form.multiple_prices_title%></label>
+                                <select name="type_of_multiple_prices">
+                                  <option value="none" <%% if (entity && entity.type_of_multiple_prices=="none") { %> selected="selected" <%% } %>><%=t.booking_activity_management.form.none%></option>
+                                  <option value="duration" <%% if (entity && entity.type_of_multiple_prices=="duration") { %> selected="selected" <%% } %>><%=t.booking_activity_management.form.duration%></option>
+                                  <option value="ages" <%% if (entity && entity.type_of_multiple_prices=="ages") { %> selected="selected" <%% } %>><%=t.booking_activity_management.form.ages%></option>
+                                  <option value="accomodation" <%% if (entity && entity.type_of_multiple_prices=="accomodation") { %> selected="selected" <%% } %>><%=t.booking_activity_management.form.accomodation%></option>
+                                </select> 
+                              </div>
+                              <div class="formrow">
+                                <label class="fieldtitle"><%=t.booking_activity_management.form.capacities_on_multiple_prices%></label>
+                                <input type="checkbox" name="capacities_on_multiple_prices" value="true" id="capacities_on_multiple_prices" <%% if (entity && entity.capacities_on_multiple_prices) { %>checked="checked"<%%}%>/>                            
+                              </div>                          
+                              <div class="bottom-navigation-bar navigation-bar" style="padding-right:0px">
+                                <div class="navigation-bar-crud-buttons">
+                                   <input type="button" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
+                                </div>
+                              </div>      
+                            </form> 
+                          </div>
+                        </div>
+                      </div>           
+
                       <%% if (entity.price_definition_1_id != null) { %>
                       <div id="price_definition_1_tab" class="top-margin bottom-margin">
                         <div class="container_12">
@@ -37,9 +69,29 @@
                             <form name="element" method="POST">    
                               <input type="hidden" name="id" value="<%%=entity.id%>"/>
                               <div class="formrow">
-                                  <label class="fieldtitle">Nombre tarifa</label>
+                                  <label class="fieldtitle"><%=t.booking_activity_management.form.price_name%></label>
                                   <input type="text" maxlength="80" id="price_1_description" name="price_1_description" class="fieldcontrol" value="<%%=entity.price_1_description%>"/>
                               </div>
+                              <div class="formrow">
+                                <label class="fieldtitle"><%=t.booking_activity_management.form.affects_capacity%></label>
+                                <input type="checkbox" name="price_1_affects_capacity" value="true" id="price_1_affects_capacity" <%% if (entity && entity.price_1_affects_capacity) { %>checked="checked"<%%}%>/>                            
+                              </div>                               
+                              <%% if (entity.capacities_on_multiple_prices) { %>
+                              <div class="formrow">
+                                  <label class="fieldtitle"><%=t.booking_activity_management.form.total_capacity%></label>
+                                  <input type="text" maxlength="80" id="price_1_description" name="price_1_total_capacity" class="fieldcontrol" value="<%%=entity.price_1_total_capacity%>"/>
+                              </div>
+                              <%% } %>    
+                              <%% if (entity.type_of_multiple_prices == 'duration') { %>
+                              <div class="formrow">
+                                  <label class="fieldtitle"><%=t.booking_activity_management.form.duration_days%></label>
+                                  <input type="text" maxlength="80" id="price_1_description" name="price_1_duration_days" class="fieldcontrol" value="<%%=entity.price_1_duration_days%>"/>
+                              </div>
+                              <div class="formrow">
+                                  <label class="fieldtitle"><%=t.booking_activity_management.form.duration_hours%></label>
+                                  <input type="text" maxlength="80" id="price_1_description" name="price_1_duration_hours" class="fieldcontrol" value="<%%=entity.price_1_duration_hours%>"/>
+                              </div>                
+                              <%% } %>                    
                               <div class="bottom-navigation-bar navigation-bar" style="padding-right:0px">
                                 <div class="navigation-bar-crud-buttons">
                                   <input type="button" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
@@ -63,9 +115,29 @@
                             <form name="element" method="POST">    
                               <input type="hidden" name="id" value="<%%=entity.id%>"/>
                               <div class="formrow">
-                                  <label class="fieldtitle">Nombre tarifa</label>
+                                  <label class="fieldtitle"><%=t.booking_activity_management.form.price_name%></label>
                                   <input type="text" maxlength="80" id="price_2_description" name="price_2_description" class="fieldcontrol" value="<%%=entity.price_2_description%>"/>
                               </div>
+                              <div class="formrow">
+                                <label class="fieldtitle"><%=t.booking_activity_management.form.affects_capacity%></label>
+                                <input type="checkbox" name="price_2_affects_capacity" value="true" id="price_2_affects_capacity" <%% if (entity && entity.price_2_affects_capacity) { %>checked="checked"<%%}%>/>                            
+                              </div>                               
+                              <%% if (entity.capacities_on_multiple_prices) { %>
+                              <div class="formrow">
+                                  <label class="fieldtitle"><%=t.booking_activity_management.form.total_capacity%></label>
+                                  <input type="text" maxlength="80" id="price_2_description" name="price_2_total_capacity" class="fieldcontrol" value="<%%=entity.price_2_total_capacity%>"/>
+                              </div>
+                              <%% } %>    
+                              <%% if (entity.type_of_multiple_prices == 'duration') { %>
+                              <div class="formrow">
+                                  <label class="fieldtitle"><%=t.booking_activity_management.form.duration_days%></label>
+                                  <input type="text" maxlength="80" id="price_2_description" name="price_2_duration_days" class="fieldcontrol" value="<%%=entity.price_2_duration_days%>"/>
+                              </div>
+                              <div class="formrow">
+                                  <label class="fieldtitle"><%=t.booking_activity_management.form.duration_hours%></label>
+                                  <input type="text" maxlength="80" id="price_2_description" name="price_2_duration_hours" class="fieldcontrol" value="<%%=entity.price_2_duration_hours%>"/>
+                              </div>                
+                              <%% } %>                                
                               <div class="bottom-navigation-bar navigation-bar" style="padding-right:0px">
                                 <div class="navigation-bar-crud-buttons">
                                   <input type="button" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
@@ -83,9 +155,29 @@
                             <form name="element" method="POST">    
                               <input type="hidden" name="id" value="<%%=entity.id%>"/>
                               <div class="formrow">
-                                  <label class="fieldtitle">Nombre tarifa</label>
-                                  <input type="text" maxlength="80" id="price_1_description" name="price_1_description" class="fieldcontrol" value="<%%=entity.price_1_description%>"/>
+                                  <label class="fieldtitle"><%=t.booking_activity_management.form.price_name%></label>
+                                  <input type="text" maxlength="80" id="price_3_description" name="price_3_description" class="fieldcontrol" value="<%%=entity.price_3_description%>"/>
                               </div>
+                              <div class="formrow">
+                                <label class="fieldtitle"><%=t.booking_activity_management.form.affects_capacity%></label>
+                                <input type="checkbox" name="price_3_affects_capacity" value="true" id="price_3_affects_capacity" <%% if (entity && entity.price_3_affects_capacity) { %>checked="checked"<%%}%>/>                            
+                              </div>                               
+                              <%% if (entity.capacities_on_multiple_prices) { %>
+                              <div class="formrow">
+                                  <label class="fieldtitle"><%=t.booking_activity_management.form.total_capacity%></label>
+                                  <input type="text" maxlength="80" id="price_3_description" name="price_3_total_capacity" class="fieldcontrol" value="<%%=entity.price_3_total_capacity%>"/>
+                              </div>
+                              <%% } %>    
+                              <%% if (entity.type_of_multiple_prices == 'duration') { %>
+                              <div class="formrow">
+                                  <label class="fieldtitle"><%=t.booking_activity_management.form.duration_days%></label>
+                                  <input type="text" maxlength="80" id="price_3_description" name="price_3_duration_days" class="fieldcontrol" value="<%%=entity.price_3_duration_days%>"/>
+                              </div>
+                              <div class="formrow">
+                                  <label class="fieldtitle"><%=t.booking_activity_management.form.duration_hours%></label>
+                                  <input type="text" maxlength="80" id="price_3_description" name="price_3_duration_hours" class="fieldcontrol" value="<%%=entity.price_3_duration_hours%>"/>
+                              </div>                
+                              <%% } %>                                
                               <div class="bottom-navigation-bar navigation-bar" style="padding-right:0px">
                                 <div class="navigation-bar-crud-buttons">
                                   <input type="button" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
