--- a/views/_booking_management_payment.erb
+++ b/views/_booking_management_payment.erb
@@ -3,7 +3,8 @@
               <div class="grid_6">  
                   <div class="left-margin">
                     <%% if (entity.status != 'cancelled') { %>
-                      <%% if ((<%=!booking_payment_enabled%> || entity.is_expired) && !entity.force_allow_payment) { %>
+                      <%% var booking_payment_enabled = <%=booking_payment_enabled%>; %>
+                      <%% if ((!booking_payment_enabled || entity.is_expired) && !entity.force_allow_payment) { %>
                         <div class="guiblock error-status bottom-margin">
                           <%=t.booking_management.form.payment_not_allowed%>
                         </div>  
