--- a/views/reservation_activity.erb
+++ b/views/reservation_activity.erb
@@ -26,7 +26,9 @@
   </div>
   <div class="grid_4">
   	<div class="left-margin">
-      <div id="datepicker"></div>
+      <% if @activity.occurence == :cyclic %>
+         <%= partial :reservation_activity_cyclic %>
+      <% end %>
   	</div>
   </div>
 </div>
